2007-08-01  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/flickrdemo.xul: Add a simple <a> so we
	can test nested browser opening.

	* compzilla/chrome/content/start.xul: set hidechrome=true,
	windowtype="navigator:desktop", and drop width/height.  This is
	just cleanup, and maybe seems to help speed on Minefield for me.

	* compzilla/chrome/content/start.js: Add compzillaInitContent
	which sets the default content listener to the new
	_compzillaContentListener which denies all requests to navigate
	away from the desktop.

2007-07-31  Alex Graveley  <alex@beatniksoftware.com>

	Include <nsIDOMClassInfo.h> everywhere so we build with latest
	Minefield sources.

2007-07-30  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome.manifest: Add flickrdemo.xul as an overlay to
	start.xul.

	* compzilla/chrome/content/flickrdemo.js: Add load handler to
	create flickrDemo window: can't access XUL overlay-added DOM
	elements without this.

	* compzilla/chrome/skin/compzilla.css: Remove flickdemo stuff,
	moved to new flickrdemo.css.

	* compzilla/chrome/content/start.xul: Remove flickdemo stuff,
	moved to new flickrdemo.xul.

2007-07-27  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/start.xul: move the loading of debug.js
	to the front of the list (just below jquery) so it should catch
	all syntax/etc errors from .js files loaded further down.

	* compzilla/chrome/content/start.js (compzillaLoad): call
	initDebugWindow here.

	* compzilla/chrome/content/debug.js: put the frame creation stuff
	in initDebugWindow, so we can move debug.js near the front of the
	loaded .js files in start.xul.  This is so we can install the
	window.onerror handler in this file which redirects js errors to
	our debug window.

2007-07-25  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/install.rdf: Undo the last changes, but now
	understanding more:

	We actually need to match an exact number for minVersion,